# kani

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.DASHBOARD.md  README.md  config.example.yaml  config.yaml  docker-compose.yaml  grafana-datasource-kani-sqlite.yml  kani-dashboard-kani.json  pyproject.toml
.cflx/: acceptance-state.json
.github/workflows/: ci.yml  release.yml
.opencodereview/: rule.json
data/: training_prompts.json
data/cache/: embeddings_d6a0740dfc61.npy
models/: tier_classifier.pkl
openspec/: CONSTITUTION.md  README.md
openspec/changes/add-capability-aware-routing/: tasks.md
openspec/specs/: REVIEW.md
scripts/: annotate_reasoning.py  annotate_synthetic.py  bootstrap_agentic_dataset.py  build_agentic_dataset.py  test_scorer.py  train_agentic_classifier.py  train_classifier.py
src/kani/: __init__.py  agentic_training.py  api_keys.py  classification_context.py  cli.py  compaction.py  compaction_store.py  config.py  dashboard.py  dirs.py  fallback_backoff.py  feature_training.py  logger.py  proxy.py  router.py  scorer.py  training_data.py
tests/: test_agentic_training_data.py  test_agentic_training_script.py  test_api_keys.py  test_api_keys_cli.py  test_api_keys_proxy.py  test_capability_routing.py  test_cli.py  test_compaction.py  test_config.py  test_context_window_routing.py  test_dashboard.py  test_fallback_backoff.py  test_feature_training.py  test_llm_classifier.py  test_proxy_reload.py  test_router_logging.py  test_scorer.py
(+162 files in other folders)
